--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "author": "Adam Rudd <adam.rudd@uqconnect.edu.au>",
   "name": "log-dissector",
   "description": "A toolkit for dissecting log files",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "git://github.com/adamvr/node-log-dissector.git"
   },
+  contributors:{"name" : "Jujhar Singh <jujhar@jujhar.com>", "url" :"http://jujhar.com"}
   "main": "index.js",
   "engines": {
     "node": "~0.6.5"
