publishing to npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "author": "Jujhar Singh <jujhar@jujhar.com>",
-    "name": "node log-dissector",
+    "name": "node-log-dissector",
     "description": "A toolkit for dissecting and parsing log files",
     "version": "0.1.2",
     "repository": {
