--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "author": "Jujhar Singh <jujhar@jujhar.com>",
     "name": "node-log-dissector",
     "description": "A toolkit for dissecting and parsing log files",
-    "version": "0.1.3",
+    "version": "0.2.3",
     "repository": {
         "type": "git",
         "url": "git://github.com/jujhars13/node-log-dissector"
@@ -11,7 +11,7 @@
         "name": "Adam Rudd <adam.rudd@uqconnect.edu.au>",
         "url": "git://github.com/adamvr/node-log-dissector.git"
     },
-    "keywords": ["log files", "parse log files", "parse logs", "amazon s3 logs", "ssh logs", "sudo logs", "level 3 cdn"],
+    "keywords": ["log files", "parse log files", "parse logs", "amazon s3 logs", "ssh logs", "sudo logs", "level 3 cdn", "cloudfront log parse"],
     "main": "index.js",
     "readmeFilename": "README.md",
     "dependencies": {},
@@ -23,7 +23,6 @@
     "scripts": {
         "test": "mocha"
     },
-
     "optionalDependencies": {},
     "license": "BSD"
 }
